--- a/temperatursensor/build.gradle
+++ b/temperatursensor/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'org.jetbrains.intellij' version '0.3.1'
 }
 
-group 'de.avg.naol'
-version '1.0-SNAPSHOT'
+group = 'de.avg.naol'
+version = '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
@@ -15,20 +15,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-group 'de.avg.naol'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: "org.eclipse.paho", name: "org.eclipse.paho.client.mqttv3", version: "1.2.0"
 }
 
 jar {
@@ -38,7 +25,7 @@ jar {
 }
 
 intellij {
-    version '2018.1'
+    version = '2018.1'
 }
 patchPluginXml {
     changeNotes """
