--- a/temperatursensor/build.gradle
+++ b/temperatursensor/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: "org.eclipse.paho", name: "org.eclipse.paho.client.mqttv3", version: "1.2.0"
+    compile group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.9.5"
 }
 
 jar {
