--- a/heizung/build.gradle
+++ b/heizung/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'de.avg.naol'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 apply plugin: 'java'
 
@@ -33,10 +33,4 @@ jar {
 
 intellij {
     version = '2018.1'
-}
-
-patchPluginXml {
-    changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
 }
